--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <body>
     <h1>Calculadora de Calor Específico</h1>
     <label for="temperatura">Temperatura (°C):</label>
+    <input type="number" id="temperatura" name="temperatura" />
     <br />
     <label for="xw">Fracción másica de agua:</label>
+    <input type="number" id="xw" name="xw" />
     <br />
     <label for="xp">Fracción másica de proteína:</label>
     <input type="number" id="xp" name="xp" />
