--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Calculadora de Calor Específico</h1>
-    <form>
+    <form onsubmit="calcular(); return false;">
       <label for="agua">Fracción másica de agua:</label>
       <input type="number" id="agua" step="0.001" value="0.908"><br>
       <label for="proteina">Fracción másica de proteína:</label>
