--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Calculadora de calor específico</title>
+	<title>Calculadoras de calor específico</title>
 </head>
 <body>
 	<h1>Calculadora de calor específico</h1>
