--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Calculadora de calor específico de alimentos</title>
 </head>
 <body>
+	<h1>Calculadora de calor específico de alimentos</h1>
+	<form method="POST" action="/">
+		<label for="agua">Fracción molar de agua:</label>
+		<input type="number" step="0.001" min="0" max="1" name="agua" value="0.908"><br>
+		<label for="proteina">Fracción molar de proteína:</label>
 		<input type="number" step="0.001" min="0" max="1" name="proteina" value="0.004"><br>
 		<label for="grasa">Fracción molar de grasa:</label>
 		<input type="number" step="0.001" min="0" max="1" name="grasa" value="0.030"><br>
