--- a/index.html
+++ b/index.html
@@ -2,23 +2,37 @@
 <html>
 <head>
 	<title>Calculadora de calor específico de alimentos</title>
+	<title>Calculadora de calor específico</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Calculadora de calor específico de alimentos</h1>
-	<form method="POST" action="/">
-		<label for="agua">Fracción molar de agua:</label>
-		<input type="number" step="0.001" min="0" max="1" name="agua" value="0.908"><br>
-		<label for="proteina">Fracción molar de proteína:</label>
-		<input type="number" step="0.001" min="0" max="1" name="proteina" value="0.004"><br>
-		<label for="grasa">Fracción molar de grasa:</label>
-		<input type="number" step="0.001" min="0" max="1" name="grasa" value="0.030"><br>
-		<label for="carbohidratos">Fracción molar de carbohidratos:</label>
-		<input type="number" step="0.001" min="0" max="1" name="carbohidratos" value="0.008"><br>
-		<label for="ceniza">Fracción molar de ceniza:</label>
-		<input type="number" step="0.001" min="0" max="1" name="ceniza" value="0.050"><br>
-		<label for="temperatura">Temperatura (°C):</label>
-		<input type="number" step="0.1" name="temperatura" value="25"><br>
-		<input type="submit" value="Calcular">
-	</form>
+	<div class="container">
+		<h1>Calculadora de calor específico</h1>
+		<form>
+			<label for="agua">Agua:</label>
+			<input type="number" step="0.01" id="agua" name="agua"><br>
+
+			<label for="proteina">Proteína:</label>
+			<input type="number" step="0.01" id="proteina" name="proteina"><br>
+
+			<label for="grasa">Grasa:</label>
+			<input type="number" step="0.01" id="grasa" name="grasa"><br>
+
+			<label for="carbohidratos">Carbohidratos:</label>
+			<input type="number" step="0.01" id="carbohidratos" name="carbohidratos"><br>
+
+			<label for="ceniza">Ceniza:</label>
+			<input type="number" step="0.01" id="ceniza" name="ceniza"><br>
+
+			<label for="temperatura">Temperatura:</label>
+			<input type="number" step="0.1" id="temperatura" name="temperatura"><br>
+
+			<button type="button" onclick="calcular()">Calcular</button>
+		</form>
+
+		<div id="resultado"></div>
+	</div>
+
+	<script src="script.js"></script>
 </body>
 </html>
