--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
 	<title>Calculadora de calor específico</title>
 	<link rel="stylesheet" href="style.css">
+<head>
+    <style>
+      body {
+        background-color: #f1f1f1;
+      }
+    </style>
+</head>
 </head>
 <body>
 	<div class="container">
