--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
 <head>
     <style>
       body {
-        background-color: #f1f1f1;
+        background-color: #0a0070;
       }
     </style>
 </head>
+<head>
+  <style>
+    body {
+      background-color: #f1f1f1;
+      color: black;
+    }
+  </style>
+</head>
+
 </head>
 <body>
 	<div class="container">
