--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
   <style>
     body {
-      background-color: #f1f1f1;
+      background-color: #0a0070;
       color: black;
     }
   </style>
