--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Calculadora de calor específico</title>
+	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
-	
+
 </head>
 <body>
 	<div class="container">
-		<h1>Calculadora de calor específico</h1>
+		<h1>Calculadora de calor específico<br>INDALI</h1>
 		<form>
 			<label for="agua">Agua:</label>
 			<input type="number" step="0.01" id="agua" name="agua"><br>
