--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="C:/Users/InTeL-PC/Pictures/Upeu Archivos/cdb19b84208886617e5be47796806d66.ico" type="image/x-icon">
 
 </head>
 <body>
