--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="C:/Users/InTeL-PC/Pictures/Upeu Archivos/cdb19b84208886617e5be47796806d66.ico" type="image/x-icon">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
 
 </head>
 <body>
