--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" href="C:/Users/InTeL-PC/Pictures/UpeuArchivos/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="C:/Users/InTeL-PC/Pictures/UpeuArchivos/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="C:/Users/InTeL-PC/Pictures/Upeu Archivos/favicon.ico" type="image/x-icon">
 
 </head>
 <body>
