--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
+<header>
+	<!-- contenido de la cabecera aquí -->
+</header>
 <head>
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="C:/Users/InTeL-PC/Pictures/Upeu Archivos/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" type="image/png" href="C:/Users/InTeL-PC/Pictures/Upeu Archivos/cp logo indali.png">
 
 </head>
+  
 <body>
 	<div class="container">
 		<h1>Calculadora de calor específico<br>INDALI</h1>
