--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
 <head>
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" type="image/png" href="C:/Users/InTeL-PC/Pictures/Upeu Archivos/cp logo indali.png">
+	<link rel="icon" href="/Images/favicon.ico" type="image/x-icon">
+	<link rel="icon" type="image/png" href="/Images/cp logo indali.png">
 
 </head>
   
 <body>
 	<div class="container">
 		<h1>Calculadora de calor específico<br>INDALI</h1>
+		<header>
+			<!-- contenido de la cabecera aquí -->
+		</header>
+		  
 		<form>
 			<label for="agua">Agua:</label>
 			<input type="number" step="0.01" id="agua" name="agua"><br>
