--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="/Images/favicon.ico" type="image/x-icon">
-	<link rel="icon" type="image/png" href="/Images/cp logo indali.png">
+	<link rel="icon" href="C:\Users\InTeL-PC\Documents\GitHub\crism2.github.io\Images/favicon.ico" type="image/x-icon">
+	<link rel="icon" type="image/png" href="C:\Users\InTeL-PC\Documents\GitHub\crism2.github.io\Images/cp logo indali.png">
 
 </head>
   
