--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="/Images/favicon.ico" type="image/x-icon">
-	<link rel="icon" type="image/png" href="Images/cp logo indali.png">
+	<link rel="icon" href="Images/cp logo indali.png" type="image/png">
 
 </head>
   
