--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 	<div class="container">
 		<header>
-			<!-- contenido de la cabecera aquí -->
+			<img src="Images/favicon.ico" alt="Logo de mi página web">
+
 		</header>
 		<h1>Calculadora de calor específico<br>INDALI</h1>
 		<form>
