--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="/Images/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="Images/cp logo indali.png" type="image/png">
+	<link rel="icon" href="Images/cplogoindali.png" type="image/png">
 
 </head>
   
 <body>
 	<div class="container">
 		<header>
-			<img src="Images/favicon.ico" alt="Logo de mi página web">
-
+			<ig src="Images/cplogoindali.png" alt="Logo de mi página web">
+			
 		</header>
 		<h1>Calculadora de calor específico<br>INDALI</h1>
 		<form>
