--- a/index.html
+++ b/index.html
@@ -41,4 +41,11 @@
 
 	<script src="script.js"></script>
 </body>
+<footer>
+  <p><a href="#">Acerca de</a></p>
+	<div class="inner-footer">
+	  <a href="#">Acerca de</a>
+	</div>
+  
+</footer>
 </html>
