--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 			<h1>Calculadora de calor específico<br>INDALI</h1>
 		</header>
 		<form>
-			<label for="agua">Agua:</label>
+			<label for="agua">Agua: ⠀⠀⠀⠀⠀⠀⠀⠀</label>
 			<input type="number" step="0.01" id="agua" name="agua"><br>
 
-			<label for="proteina">Proteína:</label>
+			<label for="proteina">Proteína: ⠀⠀⠀⠀⠀⠀</label>
 			<input type="number" step="0.01" id="proteina" name="proteina"><br>
 
-			<label for="grasa">Grasa:</label>
+			<label for="grasa">Grasa:⠀⠀⠀⠀⠀⠀⠀⠀</label>
 			<input type="number" step="0.01" id="grasa" name="grasa"><br>
 
-			<label for="carbohidratos">Carbohidratos:</label>
+			<label for="carbohidratos">Carbohidratos:⠀⠀⠀</label>
 			<input type="number" step="0.01" id="carbohidratos" name="carbohidratos"><br>
 
-			<label for="ceniza">Ceniza:</label>
+			<label for="ceniza">Ceniza: ⠀⠀⠀⠀⠀⠀⠀</label>
 			<input type="number" step="0.01" id="ceniza" name="ceniza"><br>
 
-			<label for="temperatura">Temperatura:</label>
+			<label for="temperatura">Temperatura:⠀⠀⠀⠀</label>
 			<input type="number" step="0.1" id="temperatura" name="temperatura"><br>
 
 			<button type="button" onclick="calcular()">Calcular</button>
@@ -42,9 +42,9 @@
 	<script src="script.js"></script>
 </body>
 <footer>
-  <p><a href="#">Acerca de</a></p>
+  <p><a href="https://www.facebook.com/people/Indali-Genial/100090202549138/?locale=es_LA">Acerca de</a></p>
 	<div class="inner-footer">
-	  <a href="#">Acerca de</a>
+	  <a href="https://www.facebook.com/people/Indali-Genial/100090202549138/?locale=es_LA">Acerca de</a>
 	</div>
   
 </footer>
