--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
 	<script src="script.js"></script>
 </body>
 <footer>
-  <p><a href="https://www.facebook.com/people/Indali-Genial/100090202549138/?locale=es_LA">Acerca de</a></p>
-	<div class="inner-footer">
-	  <a href="https://www.facebook.com/people/Indali-Genial/100090202549138/?locale=es_LA">Acerca de</a>
-	</div>
+  <p><a href="https://sites.google.com/upeu.edu.pe/calor?usp=sharing" target="_blank">Acerca de</a></p>
   
 </footer>
 </html>
