--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<script src="script.js"></script>
 </body>
 <footer>
-  <p><a href="https://sites.google.com/upeu.edu.pe/calor?usp=sharing" target="_blank">Acerca de</a></p>
+  <p><a href="https://sites.google.com/upeu.edu.pe/calor/about-us" target="_blank">Acerca de</a></p>
   
 </footer>
 </html>
