--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 			<label for="grasa">Grasa:⠀⠀⠀⠀⠀⠀⠀⠀</label>
 			<input type="number" step="0.01" id="grasa" name="grasa"><br>
 
-			<label for="carbohidratos">Carbohidratos:⠀⠀⠀</label>
+			<label for="carbohidratos">Carbohidratos: ⠀⠀</label>
 			<input type="number" step="0.01" id="carbohidratos" name="carbohidratos"><br>
 
 			<label for="ceniza">Ceniza: ⠀⠀⠀⠀⠀⠀⠀</label>
 			<input type="number" step="0.01" id="ceniza" name="ceniza"><br>
 
-			<label for="temperatura">Temperatura:⠀⠀⠀⠀</label>
+			<label for="temperatura">Temperatura: ⠀⠀⠀</label>
 			<input type="number" step="0.1" id="temperatura" name="temperatura"><br>
 
 			<button type="button" onclick="calcular()">Calcular</button>
