--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 	<div class="container">
 		<header>
-			<ig src="Images/cplogoindali.png" alt="Logo de mi página web">
-			<h1>Calculadora de calor específico<br>INDALI</h1>
+			<h1>CALCULADORA DE CALOR ESPECÍFICO<br>INDALI</h1>
 		</header>
 		<form>
 			<label for="agua">Agua: ⠀⠀⠀⠀⠀⠀⠀⠀</label>
