--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
 			<button type="button" onclick="calcular()">Calcular</button>
 		</form>
-
 		<div id="resultado"></div>
 	</div>
 
@@ -42,6 +41,7 @@
 </body>
 <footer>
   <p><a href="https://sites.google.com/upeu.edu.pe/calor/about-us" target="_blank">Acerca de</a></p>
-  
+  <img src="ruta de la imagen" alt="Texto alternativo de la imagen">
+
 </footer>
 </html>
