--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
 	<script src="script.js"></script>
 </body>
 <footer>
-  <p><a href="https://sites.google.com/upeu.edu.pe/calor/about-us" target="_blank">Acerca de</a></p>
-  <img src="ruta de la imagen" alt="Texto alternativo de la imagen">
-
+	<footer class="footer-container">
+		<div class="footer-links">
+		  <p><a href="https://sites.google.com/upeu.edu.pe/calor/about-us" target="_blank">Acerca de</a></p>
+		</div>
+		<div class="footer-logo">
+		  <a href="https://sites.google.com/upeu.edu.pe/calor/inicio" target="_blank">
+			<img src="Images/logoindaligenial.jpg" alt="Logo Indali Genial">
+		  </a>
+		</div>
 </footer>
 </html>
