--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="/Images/favicon.ico" type="image/x-icon">
+	
 	<link rel="icon" href="Images/cplogoindali.png" type="image/png">
 
 </head>
@@ -41,9 +41,12 @@
 </body>
 <footer>
 	<footer class="footer-container">
+		
 		<div class="footer-links">
 		  <p><a href="https://sites.google.com/upeu.edu.pe/calor/about-us" target="_blank">Acerca de</a></p>
+		  <p><a href="https://sites.google.com/upeu.edu.pe/calor/inicio" target="_blank">Copyright © 2023 Indali Genial. Todos los derechos reservados.</a></p>
 		</div>
+		
 		<div class="footer-logo">
 		  <a href="https://sites.google.com/upeu.edu.pe/calor/inicio" target="_blank">
 			<img src="Images/logoindaligenial.jpg" alt="Logo Indali Genial">
