--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
-	
 	<link rel="icon" href="Images/cplogoindali.png" type="image/png">
 
 </head>
@@ -44,7 +43,7 @@
 		
 		<div class="footer-links">
 		  <p><a href="https://sites.google.com/upeu.edu.pe/calor/about-us" target="_blank">Acerca de</a></p>
-		  <p><a href="https://sites.google.com/upeu.edu.pe/calor/inicio" target="_blank">Copyright © 2023 Indali Genial. Todos los derechos reservados.</a></p>
+		  <p><a href="Papers/COPYINDALI.txt" target="_blank">Copyright © 2023 Indali Genial. Todos los derechos reservados.</a></p>
 		</div>
 		
 		<div class="footer-logo">
