--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<header>
 			<h1>CALCULADORA DE CALOR ESPECÍFICO<br>INDALI</h1>
 
-			
+			<a href="https://crism2.github.io/calorespecificoupeu/" target="_blank">
+				<img src="Images/cplogoindali.png" alt="Logo CP Indali">
+			</a>
 
 		</header>
 		<form>
