--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 	<div class="container">
 		<header>
+			<div class="logo-container">
+				<a href="https://crism2.github.io/calorespecificoupeu/" target="_blank">
+					<img src="Images/cplogoindali.png" alt="Logo CP Indali">
+				</a>
+			</div>
 			<h1>CALCULADORA DE CALOR ESPECÍFICO<br>INDALI</h1>
-
-			<a href="https://crism2.github.io/calorespecificoupeu/" target="_blank">
-				<img src="Images/cplogoindali.png" alt="Logo CP Indali">
-			</a>
-
 		</header>
 		<form>
 			<label for="agua">Agua: ⠀⠀⠀⠀⠀⠀⠀⠀</label>
