--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<header>
 			<div class="logo-container">
-			  <a href="https://crism2.github.io/calorespecificoupeu/">
+			  <a href="https://crism2.github.io/calorespecificoupeu">
 				<img src="Images/cplogoindali.png" alt="Logo CP Indali">
 			  </a>
 			</div>
