--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="Images/cplogoindali.png" type="image/png">
-
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
   
 <body>
@@ -39,11 +39,12 @@
 			<button type="button" onclick="calcular()">Calcular</button>
 
 			<div id="resultado"></div>
+			
 		</form>
-
+			
 	</div>
-
 	<script src="script.js"></script>
+	<canvas id="myChart"></canvas>
 </body>
 <footer>
 	<footer class="footer-container">
