--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
 
 			<button type="button" onclick="calcular()">Calcular</button>
 
-			<div id="resultado"></div>
+			<div id="resultado">
+				<canvas id="myChart"></canvas>
+			</div>
 			
 		</form>
 			
 	</div>
 	<script src="script.js"></script>
-	<canvas id="myChart"></canvas>
 </body>
 <footer>
 	<footer class="footer-container">
