--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="Images/cplogoindali.png" type="image/png">
-	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
   
 <body>
@@ -38,12 +37,9 @@
 
 			<button type="button" onclick="calcular()">Calcular</button>
 
-			<div id="resultado">
-				<canvas id="myChart"></canvas>
-			</div>
+			<div id="resultado"></div>
 			
 		</form>
-			
 	</div>
 	<script src="script.js"></script>
 </body>
