--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</div>
 		
 		<div class="footer-logo">
-		  <a href="Subpages/calorespecifico.html" target="_blank">
+		  <a href="Images/logoindaligenial.html" target="_blank">
 			<img src="Images/logoindaligenial.jpg" alt="Logo Indali Genial">
 		  </a>
 		</div>
