--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Calculadora de Calor Específico INDALI</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="Images/cplogoindali.png" type="image/png">
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono" rel="stylesheet">
 </head>
   
 <body>
