--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
 		  <div id="resultado"></div>
 		  
 		</form>
-		<iframe src="Papers/tablas-peruanas-QR.pdf"></iframe>
+		<div class="sheet-container">
+			<sheet>
+			<p><a href="https://repositorio.ins.gob.pe/bitstream/handle/20.500.14196/1034/tablas-peruanas-QR.pdf?sequence=3&isAllowed=y" 
+				target="_blank">TABLASPERUANAS DE COMPOSICIÓN DE ALIMENTOS<br>[MINISTERIO DE SALUD DEL PERÚ]</a></p>
+			<p><a href="Papers/FORMULA.pdf" 
+				target="_blank">Datos y formula<br>[Choi, Y. & Okos, M.R. (1986)]</a></p>
+			</sheet>
+		</div>
 	  </div>
 	</div>
 	<script src="script.js"></script>
