--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
   
 		  <label for="ceniza">Ceniza:</label>
 		  <input type="number" step="0.01" id="ceniza" name="ceniza"><br>
+
+		  <label for="hielo">Hielo:</label>
+		  <input type="number" step="0.01" id="hielo" name="hielo"><br>
   
 		  <label for="temperatura">Temperatura:</label>
 		  <input type="number" step="0.1" id="temperatura" name="temperatura"><br>
